fix: collapse button cannot click

--- a/src/web/src/Pages/NewChatPage/Components/NavDrawer/NavHeader.module.scss
+++ b/src/web/src/Pages/NewChatPage/Components/NavDrawer/NavHeader.module.scss
@@ -36,6 +36,7 @@
     padding: 15px 0;
     width: 60px;
     flex-flow: column nowrap;
+    height: auto;
 
     .actionBtn {
       .icon {
